MitoMiner 4 bio/webapp alterations

--- a/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/bioFieldNames.properties
@@ -25,3 +25,14 @@ uniprotAccession=UniProt Accession
 uniprotName=UniProt Name
 url=URL
 UTRs=UTRs
+ecNumbers=EC Numbers 
+gfp=GFP
+massSpec=Mass-Spec
+keywords=UniProt Keywords
+mitochondrialLocation = Mitochondrial Location Summary
+cellularLocation = Cellular Location Summary
+ExAC = ExAC
+rnai = RNAi
+zfin = ZFIN
+SGDphenotype = SGD phenotype
+impi = IMPI
