--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -324,6 +324,161 @@ TreatmentParameter=A variable within the treatment.
 UniProtFeature=A region or site of interest in a protein sequence (source: UniProt). Examples: post-translational modifications, binding sites, enzyme active sites, local secondary structures.
 Vector=A DNA molecule that can be used to transfer DNA molecules between organisms.
 
+#########################################################################################################
+
+#MitoMiner specific descriptions
+
+Protein=One or more polypeptides which may, or may not, be covalently bonded, and which assume a native secondary and tertiary structure. 
+Protein.uniprotAccession=UniProt primary accession number (e.g. P56480)
+Protein.uniprotName=UniProt entry name (e.g. NDUA4_HUMAN)
+Protein.isFragment=Whether the protein entry is a fragment of a larger polypeptide
+Protein.molecularWeight=Molecular weight in Daltons
+Protein.MTSipsort=iPSORT mitochondrial targeting peptide prediction (http://ipsort.hgc.jp)
+Protein.MTSmitoprot=MitoProt prediction score for a mitochondrial targeting sequence in the N-terminal region (http://ihg.gsf.de/ihg/mitoprot.html)
+Protein.MTSmitoprotCleavage=MitoProt predicted cleavage site
+Protein.MTStargetP=TargetP mitochondrial targeting peptide prediction score for the N-terminal region (http://www.cbs.dtu.dk/services/TargetP)
+Protein.MTSmitofates=MitoFates prediction score for a mitochondrial targeting sequence in the N-terminal region (http://mitf.cbrc.jp/MitoFates/cgi-bin/top.cgi)
+Protein.MTSmitofatesCleavage=MitoFates predicted cleavage site (processing enzyme in brackets)
+
+Gene="Gene" is an abstract term used to describe a collection of transcripts and related regulatory features
+Gene.primaryIdentifier=Ensembl identifier
+Gene.name=NCBI gene number
+Gene.secondaryIdentifier=Genome project identifier (SGD, MGI, Hugo, RGD etc)
+Gene.symbol=Gene symbol
+Gene.mitoEncoded=Encoded on the mitochondrial genome
+Gene.mitoEvidenceGFP=Number of GFP experiment entries associated with this protein
+Gene.mitoEvidenceMassSpecExperiments=Number of independant mass-spec experiments that have found proteins encoded by this gene
+Gene.mitoEvidenceMassSpecStudies=Number of independant mitochondrial mass-spec studies that have found proteins encoded by this gene
+Gene.mitoEvidenceGO=Gene Ontology (GO) annotated as mitochondrial
+Gene.mitoEvidenceMitoCarta=Present in the MitoCarta 2.0 mitochondrial protein inventory (PubMed: 26450961)
+Gene.mitoEvidenceIMPI=Present in the Integrated Mitochondrial Protein Index (IMPI) reference set of mitochondrial genes.
+Gene.mitoEvidenceIMPIscore=Integrated Mitochondrial Protein Index (IMPI) score (from 0 to 1). 0.7 or above has good evidence to be mitochondrial. Score of 1 means known to be mitochondrial.
+Gene.mitoEvidenceHumanProteinAtlas=Has mitochondrial localisation evidence in the Human Protein Atlas (http://www.proteinatlas.org)
+Gene.commonMassSpecContaminant=Whether protein is likely to be contaminant present in mass-spec proteomic studies (such as http://www.thegpm.org/crap/)
+
+Gene.MTSipsort=iPSORT mitochondrial targeting peptide prediction (http://ipsort.hgc.jp)
+Gene.MTSmitoprot=MitoProt prediction score for a mitochondrial targeting sequence in the N-terminal region (http://ihg.gsf.de/ihg/mitoprot.html)
+Gene.MTStargetP=TargetP mitochondrial targeting peptide prediction score for the N-terminal region (http://www.cbs.dtu.dk/services/TargetP)
+Gene.MTSmitofates=MitoFates prediction score for a mitochondrial targeting sequence in the N-terminal region (http://mitf.cbrc.jp/MitoFates/cgi-bin/top.cgi)
+
+
+#GOAnnotation.GO_identifier=Gene Ontology identifier (e.g. GO:0005739)
+#GOAnnotation.title=Name of the GO entry (e.g. mitochondrion)
+
+#Annotation=Links protein entries with GO information (to use, constrain and filter results to "Constrain to be Subtype:GOAnnotation") 
+
+CellularLocation=Cellular location of a protein as determined by Gene Onotology, UniProt keyword, GFP or mass-spec experimental studies
+CellularLocation.cellular_location=Cellular location of protein (mitochondrion, nucleus, cytosol, endoplasmic reticulum, golgi apparatus, vacuole, plasma membrane)
+CellularLocation.evidence_type=Type of evidence that was used to classify protein to a cellular location (Gene Ontology, UniProt keyword, GFP or mass-spec experimental studies)
+
+GFP=GFP mitochondrial localisation data
+GFP.exp_details=Any relevant experimental details of the study
+GFP.originalIdentifier=Original identifier which was subsequently mapped to a UniProt accession number
+
+#Comment=UniProt comments
+
+Complex=Mitochondrial super complex annotation e.g. ATP synthase (limited annotation currently available)
+Complex.complex=Mitochondrial super complex e.g. ATP synthase (limited annotation currently available)
+
+UniProtFeature=UniProt protein feature
+UniProtFeature.begin=Start of feature
+UniProtFeature.end=End of feature
+UniProtFeature.description=Description of feature
+UniProtFeature.type=Type of feature
+
+PosttranslationalModifications=Addional data regarding posttranslational modifications not present in UniProt
+PosttranslationalModifications.originalIdentifier=Original identifier which was subsequently mapped to a UniProt accession number
+PosttranslationalModifications.massObserved=Mass observed in experiment (Daltons)
+PosttranslationalModifications.massCalculated=Mass calculated from protein sequence (Daltons)
+PosttranslationalModifications.massDifference=Mass difference between observed and calculated (Daltons)
+
+HomoloGene=Ortholog data from HomoloGene
+HomoloGene.orthologGroup=HomoloGene cluster
+
+ECNumber=Enzyme Commission (EC) number
+ECNumber.identifier=Enzyme Commission (EC) number (e.g. 1.1.1.1) 
+ECNumber.description=EC description from KEGG (e.g. alcohol dehydrogenase)
+
+KeggPathways=Metabolic pathway information from the Kyoto Encyclopedia of Genes and Genomes (KEGG)
+KeggPathways.pathway=KEGG pathway identifier (e.g. 00010)
+KeggPathways.pathwayDescription= Pathway description (e.g. glycolysis)
+
+KeggReactions=Metabolic reaction information from the Kyoto Encyclopedia of Genes and Genomes (KEGG)
+KeggReactions.reaction=KEGG reaction identifier (e.g. R00004)
+KeggReactions.reactionName=KEGG reaction name (e.g. diphosphate phosphohydrolase)
+KeggReactions.reactionDefinition= KEGG reaction description (e.g. Diphosphate + H2O <=> 2 Orthophosphate)
+KeggReactions.equation=Equation using KEGG compound identifiers (e.g. C00013 + C00001 <=> 2 C00009)
+KeggReactions.deltaG=Estimated standard Gibbs free energy of formation via the group contribution method (PMID:18645197)
+KeggReactions.deltaGUncertainty=Uncertainty in estimated standard Gibbs free energy of formation
+
+KeggCompounds=Metabolic compound information from the Kyoto Encyclopedia of Genes and Genomes (KEGG)
+KeggCompounds.compound=KEGG compound number (e.g. C00001)
+KeggCompounds.compoundName=KEGG compound description (e.g. H2O)
+
+#UniProtKeywords=Keywords from UniProt
+
+MassSpectrometry=Mass Spectrometry data
+MassSpectrometry.coverage=Percentage cover of identified protein with peptide fragments
+MassSpectrometry.numberOfPeptides=Number of peptides identification was based upon
+MassSpectrometry.pI=Isoelectric point
+MassSpectrometry.tissue=Tissue used in experiment
+MassSpectrometry.sequence=Sequence of peptide fragments on which identification was based
+MassSpectrometry.subcellularLocation=Subcellular location of experiment (i.e. mitochondrial inner membrane)
+MassSpectrometry.originalIdentifier=Original identifier which was subsequently mapped to a UniProt accession number
+
+ProteinAtlasExpression=Antibody expression data for different tissues and cell lines from the Human Protein Atlas (http://www.proteinatlas.org)
+ProteinAtlasExpression.gene=Original ensembl identifier used by Human Protein Atlas
+ProteinAtlasExpression.cellType=Cell type (e.g. endothelial cells)
+ProteinAtlasExpression.expressionType=Whether data is based on one or more antibodies (staining = 1, APE = 2 or more)
+ProteinAtlasExpression.reliability=Whether location is supported by gene/protein characterisation data in UniProt
+ProteinAtlasExpression.level=Level of staining (e.g. negative)
+
+ProteinAtlasCancerExpression=Antibody expression data for different cancers from the Human Protein Atlas (http://www.proteinatlas.org)
+ProteinAtlasCancerExpression.totalPatients=Total number of patient samples analysed
+ProteinAtlasCancerExpression.weak=Number of patient samples with weak antibody staining for this protein 
+ProteinAtlasCancerExpression.gene=Original ensembl identifier used by Human Protein Atlas
+ProteinAtlasCancerExpression.strong=Number of patient samples with strong antibody staining for this protein
+ProteinAtlasCancerExpression.tumour=Cancer type (e.g. glioma)
+ProteinAtlasCancerExpression.moderate=Number of patient samples with moderate antibody staining for this protein 
+ProteinAtlasCancerExpression.expressionType=Whether data is based on one or more antibodies (staining = 1, APE = 2 or more)
+ProteinAtlasCancerExpression.negative=Number of patient samples with no antibody staining for this protein 
+
+MitochondrialLocation=Location within the mitochondrion (e.g. mitochondrial matrix)
+MitochondrialLocation.evidenceType=Source of location information (Gene Ontology or experimental evidence)
+MitochondrialLocation.mitochondrialLocation=location (e.g. mitochondrial matrix)
+
+BrendaLocalisation=Mitochondrial localisation information from the BRENDA enzyme database (http://www.brenda-enzymes.org)
+BrendaLocalisation.comment=Additional comments
+BrendaLocalisation.location=Mitochondrial location as recorded in BRENDA 
+
+ProteinAtlasLocalisation=Subcellular Location as determined by the Human Protein Atlas (http://www.proteinatlas.org)
+ProteinAtlasLocalisation.identifier=Original ensembl identifier used by Human Protein Atlas
+ProteinAtlasLocalisation.otherLocation=Any additional locations of the protein
+ProteinAtlasLocalisation.expressionType=Whether data is based on one or more antibodies (staining = 1, APE = 2 or more)
+ProteinAtlasLocalisation.mainLocation=Main location of protein
+ProteinAtlasLocalisation.reliability=Whether location is supported by gene/protein characterisation data in UniProt
+
+ExperimentalTechnique=Mass-spec experimental method used
+ExperimentalTechnique.purification=Protein purification method 
+ExperimentalTechnique.separation= Protein separation method
+ExperimentalTechnique.identification=Protein identification method
+
+Organism.taxonId=NCBI organism taxon ID
+
+Publication.PubMed_ID=PubMed database ID
+Publication.experimentalEvidence=Type of evidence if paper is involved in determining localisation (e.g. Mass Spectrometry)
+
+OMIM=Online Mendelian Inheritance in Man database that catalogs human genetic disorders
+OMIM.OMIMId=OMIM ID (e.g. #125853)
+
+#Tissue=Tissue used experimentally to determine cellular location of a protein
+#Tissue.tissue=Type of tissue/strain of organism (e.g. heart) 
+
+Sequence=Protein Amino acid sequence
+Sequence.length=Length of protein in amino acids
+Sequence.residues=Amino acid sequence
+
+#######
 
 
 # Additional modMine-specific definitions
