--- a/bio/sources/uniprot/main/resources/uniprot_config.properties
+++ b/bio/sources/uniprot/main/resources/uniprot_config.properties
@@ -46,29 +46,32 @@ default.primaryIdentifier.dbref = Ensembl
 
 # human
 9606.uniqueField = primaryIdentifier
-#9606.symbol.name = primary
-9606.primaryIdentifier.dbref = Ensembl
-#9606.secondaryIdentifier.dbref = HGNC
+9606.primaryIdentifier.gene-designation = Ensembl
+9606.gene-designation = gene ID
 9606.name.dbref = GeneID
+#9606.secondaryIdentifier.dbref = HGNC
+#9606.symbol.name = primary
 
 # Mouse
 10090.uniqueField = primaryIdentifier
+10090.primaryIdentifier.gene-designation = Ensembl
+10090.gene-designation = gene ID
+10090.name.dbref = GeneID
 #10090.secondaryIdentifier.dbref = MGI
 #10090.symbol.name = primary
-10090.primaryIdentifier.dbref = Ensembl
-10090.name.dbref = GeneID
-
 
 # rat
 10116.uniqueField = primaryIdentifier
+10116.name.dbref = GeneID
+10116.primaryIdentifier.gene-designation = Ensembl
+10116.gene-designation = gene ID
 #10116.secondaryIdentifier.dbref = RGD
 #10116.symbol.name = primary
-10116.name.dbref = GeneID
-10116.primaryIdentifier.dbref = Ensembl
 
 # zebrafish
 7955.uniqueField = primaryIdentifier
-7955.primaryIdentifier.dbref = Ensembl
+7955.primaryIdentifier.gene-designation = Ensembl
+7955.gene-designation = gene ID
 #7955.secondaryIdentifier.dbref = ZFIN
 #7955.symbol.name = primary
 7955.name.dbref = GeneID
@@ -86,6 +89,7 @@ default.primaryIdentifier.dbref = Ensembl
 #284812.symbol.name = primary
 #284812.secondaryIdentifier.dbref = PomBase
 284812.primaryIdentifier.gene-designation = EnsemblFungi
+284812.gene-designation = gene ID
 284812.name.dbref = GeneID
 
 
