--- a/bio/sources/go-annotation/main/resources/go-annotation_config.properties
+++ b/bio/sources/go-annotation/main/resources/go-annotation_config.properties
@@ -8,16 +8,16 @@
 # MitoMiner4
 9606.typeAnnotated=protein
 9606.identifier=primaryAccession
-10090.typeAnnotated=protein
-10090.identifier=primaryAccession
-10116.typeAnnotated=protein
-10116.identifier=primaryAccession
-7955.typeAnnotated=protein
-7955.identifier=primaryAccession
-559292.typeAnnotated=protein
-559292.identifier=primaryAccession
-284812.typeAnnotated=protein
-284812.identifier=primaryAccession
+10090.typeAnnotated=gene
+10090.identifier=secondaryIdentifier
+10116.typeAnnotated=gene
+10116.identifier=secondaryIdentifier
+7955.typeAnnotated=gene
+7955.identifier=secondaryIdentifier
+559292.typeAnnotated=gene
+559292.identifier=secondaryIdentifier
+284812.typeAnnotated=gene
+284812.identifier=secondaryIdentifier
 
 
 # Uniprot annotations
