Final changes for version 4 Q3 2017

--- a/bio/sources/uniprot/main/resources/uniprot_config.properties
+++ b/bio/sources/uniprot/main/resources/uniprot_config.properties
@@ -40,8 +40,10 @@
 # if we find an organism not configured in this file
 # please don't remove!
 default.uniqueField = primaryIdentifier
-default.primaryIdentifier.dbref = Ensembl
+default.primaryIdentifier.gene-designation = Ensembl
 
+10000.uniqueField = primaryIdentifier
+10000.primaryIdentifier.gene-designation = Ensembl
 
 
 # human
@@ -49,45 +51,45 @@ default.primaryIdentifier.dbref = Ensembl
 9606.primaryIdentifier.gene-designation = Ensembl
 9606.gene-designation = gene ID
 9606.name.dbref = GeneID
-#9606.secondaryIdentifier.dbref = HGNC
-#9606.symbol.name = primary
+9606.secondaryIdentifier.dbref = HGNC
+9606.symbol.name = primary
 
 # Mouse
 10090.uniqueField = primaryIdentifier
 10090.primaryIdentifier.gene-designation = Ensembl
 10090.gene-designation = gene ID
 10090.name.dbref = GeneID
-#10090.secondaryIdentifier.dbref = MGI
-#10090.symbol.name = primary
+10090.secondaryIdentifier.dbref = MGI
+10090.symbol.name = primary
 
 # rat
 10116.uniqueField = primaryIdentifier
 10116.name.dbref = GeneID
 10116.primaryIdentifier.gene-designation = Ensembl
 10116.gene-designation = gene ID
-#10116.secondaryIdentifier.dbref = RGD
-#10116.symbol.name = primary
+10116.secondaryIdentifier.dbref = RGD
+10116.symbol.name = primary
 
 # zebrafish
 7955.uniqueField = primaryIdentifier
 7955.primaryIdentifier.gene-designation = Ensembl
 7955.gene-designation = gene ID
-#7955.secondaryIdentifier.dbref = ZFIN
-#7955.symbol.name = primary
+7955.secondaryIdentifier.dbref = ZFIN
+7955.symbol.name = primary
 7955.name.dbref = GeneID
 
 # yeast
 559292.uniqueField = primaryIdentifier 
-#559292.symbol.name = primary
-#559292.secondaryIdentifier.dbref = SGD
+559292.symbol.name = primary
+559292.secondaryIdentifier.dbref = SGD
 559292.primaryIdentifier.gene-designation = EnsemblFungi  
 559292.gene-designation = gene ID
 559292.name.dbref = GeneID
 
 # pombe
 284812.uniqueField = primaryIdentifier
-#284812.symbol.name = primary
-#284812.secondaryIdentifier.dbref = PomBase
+284812.symbol.name = primary
+284812.secondaryIdentifier.dbref = PomBase
 284812.primaryIdentifier.gene-designation = EnsemblFungi
 284812.gene-designation = gene ID
 284812.name.dbref = GeneID
