--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -351,8 +351,8 @@ Gene.mitoEvidenceMassSpecExperiments=Number of independant mass-spec experiments
 Gene.mitoEvidenceMassSpecStudies=Number of independant mitochondrial mass-spec studies that have found proteins encoded by this gene
 Gene.mitoEvidenceGO=Gene Ontology (GO) annotated as mitochondrial
 Gene.mitoEvidenceMitoCarta=Present in the MitoCarta 2.0 mitochondrial protein inventory (PubMed: 26450961)
-Gene.mitoEvidenceIMPI=Present in the Integrated Mitochondrial Protein Index (IMPI) reference set of mitochondrial genes.
-Gene.mitoEvidenceIMPIscore=Integrated Mitochondrial Protein Index (IMPI) score (from 0 to 1). 0.7 or above has good evidence to be mitochondrial. Score of 1 means known to be mitochondrial.
+Gene.mitoEvidenceIMPI=How gene is categorised in the Integrated Mitochondrial Protein Index (IMPI) reference set of mitochondrial genes.
+Gene.mitoEvidenceIMPIscore=Integrated Mitochondrial Protein Index (IMPI) score (from 0 to 1). 0.8 or above has good evidence to be mitochondrial.
 Gene.mitoEvidenceHumanProteinAtlas=Has mitochondrial localisation evidence in the Human Protein Atlas (http://www.proteinatlas.org)
 Gene.commonMassSpecContaminant=Whether protein is likely to be contaminant present in mass-spec proteomic studies (such as http://www.thegpm.org/crap/)
 
