--- a/bio/sources/biogrid/main/resources/biogrid_config.properties
+++ b/bio/sources/biogrid/main/resources/biogrid_config.properties
@@ -23,23 +23,63 @@
 # xref "db" value is not case sensitive, case seems to vary from file to file.
 #
 
-10090.xref.primaryIdentifier = mgd/mgi
-10090.prefix = MGI:
+
+559292.xref.primaryIdentifier = ensembl
+284812.xref.primaryIdentifier = ensembl
+7955.xref.primaryIdentifier = ensembl
+9606.xref.primaryIdentifier = ensembl
+10090.xref.primaryIdentifier = ensembl
+10116.xref.secondaryIdentifier = ensembl
+
+
+
+#10090.xref.primaryIdentifier = mgd/mgi
+#10090.prefix = MGI:
 
 
 # dmel
-7227.primaryIdentifier = shortLabel
+#7227.primaryIdentifier = shortLabel
 
 # worm
-6239.xref.primaryIdentifier = WormBase
+#6239.xref.primaryIdentifier = WormBase
 
 # yeast
-4932.xref.primaryIdentifier = SGD
-4932.strain = 559292
+#4932.xref.primaryIdentifier = SGD
+#4932.strain = 559292
 
 # human
-9606.primaryIdentifier = shortLabel
+#9606.primaryIdentifier = shortLabel
 
 # ecoli
-83333.xref.primaryIdentifier = ecogene
-83333.strain = 511145
+#83333.xref.primaryIdentifier = ecogene
+#83333.strain = 511145
+
+
+#559292.xref.primaryIdentifier = ensembl
+#284812.xref.primaryIdentifier = ensembl
+#7955.xref.primaryIdentifier = ensembl
+#9606.xref.primaryIdentifier = ensembl
+#10090.xref.primaryIdentifier = ensembl
+#10116.xref.primaryIdentifier = ensembl
+
+#10116.xref.primaryIdentifier = refseq
+#10116.prefix = RGD:
+
+#10090.xref.secondaryIdentifier = mgd/mgi
+#10090.prefix = MGI:
+
+#9606.xref.secondaryIdentifier = hgnc
+#9606.prefix = HGNC:
+
+#559292.xref.secondaryIdentifier = sgd
+
+
+#9606.primaryIdentifier = shortLabel
+#10090.primaryIdentifier = shortLabel
+#7955.primaryIdentifier = shortLabel
+#284812.primaryIdentifier = shortLabel
+#559292.primaryIdentifier = shortLabel
+
+
+
+
