--- a/mitominer4/dbmodel/resources/genomic_keyDefs.properties
+++ b/mitominer4/dbmodel/resources/genomic_keyDefs.properties
@@ -1,12 +1,12 @@
 # BioEntity is abstract
 
 Gene.key_primaryidentifier=primaryIdentifier
-Gene.key_secondaryidentifier=secondaryIdentifier, organism
-Gene.key_symbol_org=symbol, organism
+#Gene.key_secondaryidentifier=secondaryIdentifier, organism
+#Gene.key_symbol_org=symbol, organism
 Protein.key_primaryidentifier=primaryIdentifier
-Protein.key_secondaryidentifier=secondaryIdentifier
-Protein.key_primaryacc=primaryAccession
-Protein.key_md5checksum_taxonid=md5checksum, organism
+#Protein.key_secondaryidentifier=secondaryIdentifier
+#Protein.key_primaryacc=primaryAccession
+#Protein.key_md5checksum_taxonid=md5checksum, organism
 Sequence.key_md5checksum=md5checksum
 Synonym.key_synonym = subject, value
 Organism.key_taxonid=taxonId
