--- a/mitominer4/dbmodel/resources/genomic_priorities.properties
+++ b/mitominer4/dbmodel/resources/genomic_priorities.properties
@@ -12,26 +12,29 @@
 #
 # Gene.name = flybase, *
 
-# Gene.primaryIdentifier = \
-#  uniprot, \
-#  chromosome, \
-#  *
+ Gene.primaryIdentifier = \
+  uniprot, \
+  chromosome, \
+  *
 
-#Gene.secondaryIdentifier = \
-#  chromosome, \
-#  uniprot, \
-#  *
+Gene.secondaryIdentifier = \
+  chromosome, \
+  uniprot, \
+  uniprot-addons, \
+  *
 
-#Gene.symbol = \
-#  chromosome, \
-#  uniprot, \
-#  *
+Gene.symbol = \
+  chromosome, \
+  uniprot, \
+  uniprot-addons, \
+  *
 
 
-#Gene.name = \
-#  uniprot, \
-#  chromosome, \
-#  *
+Gene.name = \
+  uniprot, \
+  uniprot-addons, \
+  chromosome, \
+  *
 
 Gene.sequenceOntologyTerm = \
 uniprot, \
@@ -40,6 +43,7 @@ uniprot, \
 #SequenceFeature.sequenceOntologyTerm = \
 #protein-atlas, \
 #uniprot, \
+#  uniprot-addons, \
 #biogrid, \
 #*
 
@@ -57,8 +61,24 @@ Protein.primaryIdentifier = \
   uniprot, \
   *
 
+Protein.primaryAccession = \
+  uniprot, \
+  *
+
+Protein.secondaryIdentifier = \
+  uniprot, \
+  *
+
+Protein.uniprotAccession = \
+  uniprot, \
+  *
+
 Protein.name = \
   uniprot, \
+  *
+
+Protein.sequence = \
+  uniprot-addons, \
   *
 
 Protein.uniprotName = \
@@ -66,9 +86,11 @@ Protein.uniprotName = \
   *
   
 Organism.taxonId = \
+  chromosome,\
   ms_xml, \
   gfp_xml, \
   uniprot, \
+  uniprot-addons,\
   go-annotation, \
   go, \
   ensembl-compara, \
