--- a/mitominer4/dbmodel/resources/genomic_precompute.properties
+++ b/mitominer4/dbmodel/resources/genomic_precompute.properties
@@ -33,10 +33,10 @@ precompute.constructquery.29 = Protein genes Gene goAnnotation GOAnnotation onto
 precompute.constructquery.24 = Gene ontologyAnnotations OntologyAnnotation
 
 # interactions
-precompute.constructquery.40 = Gene interactions Interaction gene2 Gene
-precompute.constructquery.41 = Interaction gene2 Gene
-precompute.constructquery.42 = Gene interactions Interaction
-precompute.constructquery.43 = Interaction details InteractionDetail experiment InteractionExperiment
+#precompute.constructquery.40 = Gene interactions Interaction gene2 Gene
+#precompute.constructquery.41 = Interaction gene2 Gene
+#precompute.constructquery.42 = Gene interactions Interaction
+#precompute.constructquery.43 = Interaction details InteractionDetail experiment InteractionExperiment
 
 
 #homologs
